<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="homeViewModel"
            type="com.example.candyanimation.ui.home.HomeViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".ui.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_start"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/home_start_guideline_size" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_end"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/d22" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_sun"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_sun"
                app:layout_constraintDimensionRatio="H, 149:142"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.38" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="0dp"
                android:layout_height="@dimen/d50"
                android:background="@drawable/shape_oval_r29"
                android:backgroundTint="@color/white1f"
                app:iconifiedByDefault="false"
                app:queryBackground="@android:color/transparent"

                app:layout_constraintBottom_toBottomOf="@+id/iv_sun"
                app:layout_constraintEnd_toEndOf="@+id/gl_end"
                app:layout_constraintStart_toStartOf="@+id/gl_start"
                app:queryHint="@string/search_hint" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_prize_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d40"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_sun">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_center_prize_v"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_center_prize_h"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.5" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_prize"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@mipmap/ic_prize"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="H, 403:203"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_find_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_black"
                    android:text="@string/find_code_get_prize"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/s23"
                    android:textAlignment="textStart"
                    app:layout_constraintBottom_toBottomOf="@+id/gl_center_prize_h"
                    app:layout_constraintEnd_toStartOf="@+id/gl_center_prize_v" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_discover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d7"
                    android:background="@drawable/shape_oval_r15"
                    android:fontFamily="@font/circe"
                    android:paddingStart="@dimen/d16"
                    android:paddingTop="@dimen/d5"
                    android:paddingEnd="@dimen/d16"
                    android:paddingBottom="@dimen/d5"
                    android:text="@string/discover"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/s14"
                    app:layout_constraintStart_toStartOf="@+id/tv_find_code"
                    app:layout_constraintTop_toBottomOf="@+id/gl_center_prize_h" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d40"
                android:fontFamily="@font/circe_bold"
                android:text="@string/categories"
                android:textColor="@android:color/black"
                android:textSize="@dimen/s20"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/gl_start"
                app:layout_constraintTop_toBottomOf="@+id/cl_prize_wrapper" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_categories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d25"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:overScrollMode="never"
                android:paddingStart="@dimen/home_start_guideline_size"
                android:paddingEnd="@dimen/d0"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_categories"
                tools:itemCount="3"
                tools:listitem="@layout/rv_item_top_category" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_most_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d46"
                android:fontFamily="@font/circe_bold"
                android:text="@string/most_popular"
                android:textColor="@android:color/black"
                android:textSize="@dimen/s20"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/gl_start"
                app:layout_constraintTop_toBottomOf="@+id/rv_categories" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_products"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d20"
                android:maxHeight="500dp"
                android:overScrollMode="never"
                android:paddingBottom="@dimen/d16"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_most_popular"
                tools:itemCount="3"
                tools:listitem="@layout/rv_item_popular_product" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>